# ATCP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
lib/: CMakeLists.txt  DEVELOPER_GUIDE.md  USER_GUIDE.md
lib/include/atcp/: atcp.h  coding.h  config.h  link.h  modulation.h  physical.h  platform.h  types.h
lib/include/audiothief/: audiothief.h
lib/src/: atcp.c  audiothief.c
lib/src/coding/: crc32.c  crc32.h  gf256.c  gf256.h  reed_solomon.c  reed_solomon.h
lib/src/common/: fft.c  fft.h  math_utils.c  math_utils.h  prng.c  prng.h  ring_buffer.c  ring_buffer.h
lib/src/link/: ack.c  ack.h  arq.c  arq.h  frame.c  frame.h  handshake.c  handshake.h  heartbeat.c  heartbeat.h
lib/src/modulation/: channel_est.c  channel_est.h  frame_sync.c  frame_sync.h  ofdm.c  ofdm.h  qam.c  qam.h  training.c  training.h
lib/src/physical/: agc.c  agc.h  cfo.c  cfo.h  diff_signal.c  diff_signal.h  sfo.c  sfo.h
lib/tests/: CMakeLists.txt  test_arq.c  test_crc.c  test_fft.c  test_frame_sync.c  test_loopback.c  test_ofdm.c  test_qam.c  test_rs.c
simulator/: ATCP.Simulator.sln
simulator/SimCommon/: AtcpNative.cs  DualWriter.cs  SimCommon.csproj  TcpAudioTransport.cs
simulator/SimLower/: Program.cs
simulator/SimMiddleware/: Program.cs  SimMiddleware.csproj
simulator/SimUpper/: Program.cs  SimUpper.csproj
